[gd_scene load_steps=4 format=3 uid="uid://c0rdbdlwstnvd"]

[ext_resource type="Script" uid="uid://gg01dakqve8r" path="res://game/models/player/ui/inventory/inventory_slot.gd" id="2_y8lib"]
[ext_resource type="Texture2D" uid="uid://bd6ej1k0l3to6" path="res://assets/Player/UI/action_bar_selected_border.png" id="3_y8lib"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_68phm"]
load_path = "res://.godot/imported/playerpage_profile_border.png-26e8f9c642d027dc06a00e4383fb6d24.ctex"

[node name="InventorySlot" type="TextureRect"]
custom_minimum_size = Vector2(24, 24)
anchors_preset = -1
anchor_right = 0.0125
anchor_bottom = 0.022222223
offset_right = -24.0
offset_bottom = -24.0
mouse_filter = 0
texture = SubResource("CompressedTexture2D_68phm")
expand_mode = 1
script = ExtResource("2_y8lib")
metadata/_edit_use_anchors_ = true

[node name="ItemTexture" type="TextureRect" parent="."]
layout_mode = 0
anchor_left = 0.083333336
anchor_top = 0.083333336
anchor_right = 0.9166667
anchor_bottom = 0.875
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="SelectedTexture" type="TextureRect" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.041666668
anchor_top = 0.041666668
anchor_right = 0.9583333
anchor_bottom = 0.9583333
mouse_filter = 2
texture = ExtResource("3_y8lib")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
